# hls-proteinfolding

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md
setup/: README.md  af2downloads.yaml  cleanup.ipynb  cleanup.py  config.yaml  dbx_folding_compute.py  install.ipynb  install.py  install.yaml  install_incl_af2downloads.yaml  install_job_spec.yaml  install_w_attributes.yaml
tutorials/alphafold/: 00_introduction.ipynb  01_create_downloads_workflow.py  02_create_alphafold_workflow.py  03_run_alphafold_workflow.py  README.md  example_analysis_notebook.py
tutorials/app/: 00_introduction.ipynb  01_create_app_with_sdk.py  README.md
tutorials/app/src/: alphafold.py  app.py  app.yaml  as_darkmode.js  boltz.py  endpoint_queries.py  esmfold.py  molstar_tools.py  protein_design.py  requirements.txt  structure_utils.py
tutorials/boltz/: README.md
tutorials/boltz/dbboltz/: pyproject.toml
tutorials/boltz/dbboltz/src/dbboltz/: boltz.py
tutorials/boltz/dbboltz/src/dbboltz/alphafold/: README.md  jackhmmer.py  pipeline.py  utils.py
tutorials/boltz/envs/: conda_env.yaml
tutorials/boltz/notebooks/: make_pyfunc.ipynb  prep_model_weights.ipynb  run_in_notebook_as_fn.ipynb  serve_boltz.ipynb
tutorials/chai1/: 01_explore_installation_simpletest.ipynb  cluster_info.json
tutorials/chai1/manual_chaidiscovery_test/: pae.rank_0.npy  pae.rank_1.npy  pae.rank_2.npy  pae.rank_3.npy  (+11 more)
tutorials/esmfold/: ESMFold_endpoint_query.py  ESMfold_from_load.py  ESMfold_log.py  README.md
tutorials/protein_design/: inpaint_infer_fold.ipynb
tutorials/proteinmpnn/: README.md
tutorials/proteinmpnn/proteinmpnn/: LICENSE  README.md  pyproject.toml
tutorials/proteinmpnn/proteinmpnn/src/proteinmpnn/: parse_multiple_chains.py  run.py  utils.py
tutorials/rfdiffusion/: README.md  fetch_repo_and_weights.ipynb  query_rfdiffusion_endpoint.py  rfdiffusion_from_load.py  rfdiffusion_log.py  serve_rfdiffusion.ipynb
(+50 files in other folders)
