[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteinmpnn"
version = "0.1.0"
authors = [{name = "Peter Hawkins", email = "peter.hawkins@databricks.com"}]
description = "proteinMPNN adapted for pip install"
dependencies = [
  "mlflow==3.1.0",
  "cloudpickle==2.2.1",
]

[tool.setuptools]
packages = ["proteinmpnn"]
package-dir = {"" = "src"}